--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Medicine Project</title>
+
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>Server setup is completed and running on port 3000.</h1>
+    <header>
+      <h1>TrueMed</h1>
+    </header>
   </body>
 </html>
